tests/baselines/reference/exportDeclaration_moduleSpecifier.errors.txt
/c.ts(3,5): error TS2693: 'A' only refers to a type, but is being used as a value here.


==== /a.ts (0 errors) ====
    export class A {}
    
==== /b.ts (0 errors) ====
    export type { A } from './a';
    
==== /c.ts (1 errors) ====
    import { A } from './b';
    declare const a: A;
    new A();
        ~
!!! error TS2693: 'A' only refers to a type, but is being used as a value here.
    